Upgrade to Jersey 4.x (fixes #917, #671)
- Use Apache5 connector
- Use custom UNIX socket connector
- Drop support for Windows named pipes
- Drop dependency to jnr-unixsocket