@@ -136,7 +136,7 @@ class SystemCredentialHelperDelegate implements CredentialHelperDelegate {
   private Process exec(final String subcommand, final String credsStore) throws IOException {
     final String cmd = "docker-credential-" + credsStore + " " + subcommand;
     log.debug("Executing \"{}\"", cmd);
-    return Runtime.getRuntime().exec(cmd);
+    return Runtime.getRuntime().exec(new String[] {cmd});
   }
   
   private static class MapTypeReference extends TypeReference<Map<String, String>> {
